// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`agent-acl-changes e2e tests should process tx with permission change 1`] = `
Finding {
  "addresses": [],
  "alertId": "ARAGON-ACL-PERMISSION-CHANGED",
  "description": "Role 0x5de467a460382d13defdc02aacddc9c7d6605d6d4e0b8bd2f70732cae8ea17bc (CREATE PAYMENTS ROLE) on the app [0xB9E5CBB9CA5b0d659238807E84D0176930753d86](https://etherscan.io/address/0xB9E5CBB9CA5b0d659238807E84D0176930753d86) (Aragon Finance) was revoked from and granted with params to 0xFE5986E06210aC1eCC1aDCafc0cc7f8D63B3F977 (EVMScriptExecutor)",
  "labels": [],
  "metadata": {},
  "name": "🚨 Aragon ACL: Permission revoked and granted with params",
  "protocol": "ethereum",
  "severity": 3,
  "source": {},
  "type": 4,
  "uniqueKey": "",
}
`;

exports[`agent-acl-changes e2e tests should process tx with permission manager changed 1`] = `
Finding {
  "addresses": [],
  "alertId": "ARAGON-ACL-PERMISSION-MANAGER-CHANGED",
  "description": "Permission manager for the role 0x9d68ad53a92b6f44b2e8fb18d211bf8ccb1114f6fafd56aa364515dfdf23c44f (SET EL REWARDS VAULT ROLE) on the app [0xae7ab96520DE3A18E5e111B5EaAb095312D7fE84](https://etherscan.io/address/0xae7ab96520DE3A18E5e111B5EaAb095312D7fE84) (stETH token) was set to [0x2e59A20f205bB85a89C53f1936454680651E618e](https://etherscan.io/address/0x2e59A20f205bB85a89C53f1936454680651E618e) (Aragon Voting)",
  "labels": [],
  "metadata": {},
  "name": "🚨 Aragon ACL: Permission manager changed",
  "protocol": "ethereum",
  "severity": 5,
  "source": {},
  "type": 4,
  "uniqueKey": "",
}
`;
